--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -5,7 +5,7 @@
 @if (_rootComponent != null)
 {
     <div class="designpanel" style="margin:5px; height:100%; overflow-y: auto;">
-        <DropItemContainer ContainerComponent="@_rootComponent"></DropItemContainer>
+        <DropItemContainer ContainerComponent="@_rootComponent" IsRootContainer="true"></DropItemContainer>
 
         @if (PageType == (int)PageTypeEnum.Form)
         {
