--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItemContainer.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItemContainer.razor
@@ -10,7 +10,7 @@
     {
         @if (comp.IsTemplate == false)
         {
-            <DropItem Component="comp" OnItemClick="OnItemClick" OnItemDelete="OnItemDelete" OnItemCopy="OnItemCopy" />
+            <DropItem Component="comp" IsInRootContainer="@IsRootContainer" OnItemClick="OnItemClick" OnItemDelete="OnItemDelete" OnItemCopy="OnItemCopy" />
         }
         else
         {
@@ -33,6 +33,9 @@
 
     [Parameter]
     public ComponentSchema ContainerComponent { get; set; }
+
+    [Parameter]
+    public bool IsRootContainer { get; set; }
 
     [Parameter]
     public string Style { get; set; }
@@ -61,9 +64,9 @@
     private void RegisterEventDispatcher()
     {
         //根容器订阅组件面板点击事件 - 向根容器添加组件
-        if (ReferenceEquals(ContainerComponent, DragDropStateService.GetRootComponent(PageCascading.AppId, PageCascading.PageId)))
+        if (IsRootContainer)
         {
-            //订阅左侧组件面板中的组件点击事件
+            //订阅 ComponentPanel 中的组件点击事件
             BlazorEventDispatcher.RegisterEvent("designengine.dragitem.onclick", (value) =>
             {
                 DragDropHandler((ComponentSchema)value);
@@ -83,7 +86,7 @@
 
     private void OnClick()
     {
-        if (ReferenceEquals(ContainerComponent, DragDropStateService.GetRootComponent(PageCascading.AppId, PageCascading.PageId)))
+        if (IsRootContainer)
         {
             DragDropStateService.ResetDragStyle(PageCascading.AppId, PageCascading.PageId);
         }
@@ -162,10 +165,6 @@
     {
         currentDragComponent.ParentId = containerComponent.Id;
         currentDragComponent.IsDroppedFromComponentPanel = false;
-
-        //容器内组件宽度始终100%填充 (除根容器外)
-        if (ReferenceEquals(ContainerComponent, DragDropStateService.GetRootComponent(PageCascading.AppId, PageCascading.PageId)) == false)
-            currentDragComponent.ComponentStyle.ItemWidth = 24;
 
         if (isSelected)
         {
