--- a/src/RenderEngine/H.LowCode.RenderEngine/PageRender/NormalPageRender.razor
+++ b/src/RenderEngine/H.LowCode.RenderEngine/PageRender/NormalPageRender.razor
@@ -4,7 +4,7 @@
 {
     if (component.IsContainerComponent)
     {
-        <ContainerComponentRender ContainerComponent="@component"></ContainerComponentRender>
+        <ContainerComponentRender ContainerComponent="@component" IsRootContainer="true"></ContainerComponentRender>
     }
     else
     {
