- [RenderEngine] 调整页面渲染样式 - 添加页面标题

--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/MenuManager.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/MenuManager.razor
@@ -7,6 +7,8 @@
 @inject IMessageService Message
 @inject ComponentStateWrapper<MenuManager, IList<MenuSchema>> State
 
+<PageTitle>菜单管理</PageTitle>
+
 <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
     <div style="text-align: left; width:250px;">
         <Search Placeholder="菜单名称" OnSearch="()=>{}" />
