--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/PageManager.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/PageManager.razor
@@ -7,6 +7,8 @@
 @inject IMessageService Message
 @inject ComponentStateWrapper<PageManager, IList<PageListModel>> State
 
+<PageTitle>页面管理</PageTitle>
+
 <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
     <div style="text-align: left; width:250px;">
         <Search Placeholder="页面名称" OnSearch="()=>{}" />
