--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/wwwroot/designengineadmin.css
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/wwwroot/designengineadmin.css
@@ -1,4 +1,5 @@
-﻿.designengineadmin .ant-pro-basicLayout-content {
+﻿/* ====================== 覆盖 antdesign 默认样式 ========================== */
+.designengineadmin .ant-pro-basicLayout-content {
     margin: 16px;
 }
 
