--- a/src/DesignEngine/H.LowCode.DesignEngine/Pages/DesignPage.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Pages/DesignPage.razor
@@ -141,6 +141,6 @@
     private void SetPageModel(PageSchema pageSchema)
     {
         _pageCascadingModel.PageName = pageSchema.Name;
-        _pageCascadingModel.PageProperty = pageSchema.PageProperty;
+        _pageCascadingModel.PageLayout = pageSchema.PageProperty.PageLayout;
     }
 }
