--- a/src/Workbench/H.LowCode.Workbench/Pages/Index.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/Index.razor
@@ -1,6 +1,8 @@
 ﻿@page "/"
 @namespace H.LowCode.Workbench
 
+<PageTitle>工作台 - H.LowCode</PageTitle>
+
 <style>
     .grid-space {
         margin: 10px;
