--- a/src/Workbench/H.LowCode.Workbench/Pages/MarketCenter.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/MarketCenter.razor
@@ -2,6 +2,8 @@
 @namespace H.LowCode.Workbench
 @layout WorkbenchLayout
 
+<PageTitle>生态中心 - H.LowCode</PageTitle>
+
 <style>
     .market-banner {
         text-align: center;
