--- a/src/Workbench/H.LowCode.Workbench/Pages/SolutionCenter.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/SolutionCenter.razor
@@ -2,6 +2,8 @@
 @namespace H.LowCode.Workbench
 @layout WorkbenchLayout
 
+<PageTitle>解决方案中心 - H.LowCode</PageTitle>
+
 <style>
     .solution-banner {
         text-align: center;
