--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/DataSourceManager.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/DataSourceManager.razor
@@ -2,6 +2,8 @@
 @namespace H.LowCode.DesignEngine.Admin
 @layout DesignEngineAdminLayout
 
+<PageTitle>数据源管理</PageTitle>
+
 <Tabs DefaultActiveKey="tab_datasource_table" OnChange="OnTabChange" Animated>
     <TabPane Tab="数据表" Key="tab_datasource_table">
         <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
