--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
@@ -3,7 +3,7 @@
 @inject DragDropStateService DragDropStateService
 
 <div class="dropitem-box @DropItemBoxClassMapper.Class" style="float:left; opacity:@Component.Opacity;
-    width: @(IsInRootContainer ? 100/PageCascading.PageProperty.PageLayout : 100)%; min-height: @(Component.ComponentStyle.ItemHeight)px;
+    width: @(IsInRootContainer ? 100/PageCascading.PageLayout : 100)%; min-height: @(Component.ComponentStyle.ItemHeight)px;
      position:@Component.ComponentStyle.Position;
      @Component.ComponentStyle.DefaultStyle @Component.ComponentStyle.CustomStyle"
      @onclick="OnClick" @onclick:stopPropagation
@@ -87,7 +87,7 @@
             //订阅 PageSetting 中的组件点击事件
             BlazorEventDispatcher.RegisterEvent("designengine.pagesetting.pagelayout.onchange", (value) =>
             {
-                PageCascading.PageProperty.PageLayout = (int)value;
+                PageCascading.PageLayout = (int)value;
                 StateHasChanged();
             });
         }
