--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/Layout/AntBlazorThemeLayout.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/Layout/AntBlazorThemeLayout.razor
@@ -6,9 +6,9 @@
 @inject ComponentStateWrapper<AntBlazorThemeLayout, MenuDataItem[]> State
 @inject ComponentStateWrapper<string, string> State2
 
-<PageTitle>@State2.Value</PageTitle>
+<link href="_content/H.LowCode.ThemeParts.AntBlazor/renderengine.css" rel="stylesheet" />
 
-<AntDesign.ProLayout.BasicLayout FixedHeader="true" Logo="@("logo.png")" Title="@State2.Value" MenuData="@State.Value"
+<AntDesign.ProLayout.BasicLayout FixedHeader="true" Class="renderengine" Logo="@("logo.png")" Title="@State2.Value" MenuData="@State.Value"
     Layout="AntDesign.ProLayout.Layout.Side">
     <RightContentRender>
         @*<AntDesign.Pro.Template.Components.RightContent />*@
