--- a/src/Workbench/H.LowCode.Workbench/Pages/MyApps.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/MyApps.razor
@@ -6,6 +6,8 @@
 @inject NavigationManager NavigationManager
 @inject ComponentStateWrapper<MyApps, IList<AppSchema>> State
 
+<PageTitle>我的应用 - H.LowCode</PageTitle>
+
 <div style="margin:-24px -24px 0px -24px; padding: 0 50px; background-size: 100% 80px; background-image:url(https://img.alicdn.com/imgextra/i4/O1CN01U2c7FD1EQyHx3iei2_!!6000000000347-2-tps-5760-320.png)">
     <div style="width:80%; line-height:80px; margin:auto;">
         <div style="display: flex; justify-content: space-between; margin: 0 0 8px 5px;">
