--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/_Imports.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
 @using H.LowCode.RenderEngine
+@using H.LowCode.RenderEngine.Abstraction
 @using H.LowCode.MetaSchema
 @using System.Net.Http
 @using System.Net.Http.Json
