--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/DataSource/DataSourceTable.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/DataSource/DataSourceTable.razor
@@ -15,10 +15,10 @@
 
 @* 字段列表 *@
 <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
-    <div style="text-align: left; width:250px;">
+    <div style="width:250px;">
         <Search Placeholder="表名、表中文名" OnSearch="()=>{}" />
     </div>
-    <div style="text-align: right; width:80px; line-height:32px; margin: 0 22px 0 0;">
+    <div style="width:80px; line-height:32px; margin: 0 22px 0 0;">
         <Button Type="@ButtonType.Primary" OnClick="CreateAsync">新增字段</Button>
     </div>
 </div>
