--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/DataSourceManager.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/DataSourceManager.razor
@@ -7,10 +7,10 @@
 <Tabs DefaultActiveKey="tab_datasource_table" OnChange="OnTabChange" Animated>
     <TabPane Tab="数据表" Key="tab_datasource_table">
         <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
-            <div style="text-align: left; width:250px;">
+            <div style="width:250px;">
                 <Search Placeholder="表名、表中文名" OnSearch="()=>{}" />
             </div>
-            <div style="text-align: right; width:80px; line-height:32px; margin: 0 22px 0 0;">
+            <div style="width:80px; line-height:32px; margin: 0 22px 0 0;">
                 <Button Type="@ButtonType.Primary" OnClick="CreateTableAsync">新建数据表</Button>
             </div>
         </div>
@@ -39,10 +39,10 @@
 
     <TabPane Tab="API" Key="tab_datasource_api">
         <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
-            <div style="text-align: left; width:250px;">
+            <div style="width:250px;">
                 <Search Placeholder="表名、表中文名" OnSearch="()=>{}" />
             </div>
-            <div style="text-align: right; width:80px; line-height:32px;">
+            <div style="width:80px; line-height:32px;">
                 <Button Type="@ButtonType.Primary" OnClick="CreateAPIAsync">新建API</Button>
             </div>
         </div>
