--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/PageManager.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/PageManager.razor
@@ -5,20 +5,20 @@
 @inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager NavigationManager
 @inject IMessageService Message
-@inject ComponentStateWrapper<PageManager, IList<PageListModel>> State
+@inject ComponentStateWrapper<PageManager, IList<PageListModel>> PageListState
 
 <PageTitle>页面管理</PageTitle>
 
 <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
-    <div style="text-align: left; width:250px;">
+    <div style="width:250px;">
         <Search Placeholder="页面名称" OnSearch="()=>{}" />
     </div>
-    <div style="text-align: right; width:80px; line-height:32px; margin: 0 8px 0 0;">
+    <div style="width:80px; line-height:32px; margin: 0 8px 0 0;">
         <Button Type="@ButtonType.Primary" OnClick="@(()=> CreateAsync(string.Empty))">新建页面</Button>
     </div>
 </div>
 
-<Table TItem="PageListModel" DataSource="@State.Value" PageSize="15" PageIndex="1" Total="_total"
+<Table TItem="PageListModel" DataSource="@PageListState.Value" PageSize="15" PageIndex="1" Total="_total"
        @bind-SelectedRows="selectedRows" Style="height:100%;">
     <Selection Key="@(context.PageId)" />
     <Column Title="ID" @bind-Field="@context.PageId" Width="300" />
@@ -90,9 +90,9 @@
     protected override async Task OnInitializedAsync()
     {
         _total = 50;
-        if (State.Value is null)
+        if (PageListState.Value is null)
         {
-            State.Value = await LoadPagesAsync(1, 50);
+            PageListState.Value = await LoadPagesAsync(1, 50);
 
             await base.OnInitializedAsync();
         }
@@ -170,7 +170,7 @@
 
     private async Task OnFinishAsync()
     {
-        State.Value = await LoadPagesAsync(1, 50);
+        PageListState.Value = await LoadPagesAsync(1, 50);
     }
 
     private async Task<HttpResponseMessage> SavePageSchemaAsync()
