--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/StyleSetting.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/StyleSetting.razor
@@ -4,7 +4,7 @@
 {
     <div class="propertysetting-item">
         <label>组件宽度：</label>
-        <Slider TValue="double" Value="@Component.ComponentStyle.ItemWidth" DefaultValue="12" Min="4" Max="24" OnChange="(value) => OnStyleChange()" />
+        <Slider TValue="double?" Value="@Component.ComponentStyle.ItemWidth" Min="4" Max="24" OnChange="(value) => OnStyleChange()" />
     </div>
     @if (Component.IsHiddenTitle == false && Component.IsContainerComponent == false)
     {
