--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/_Imports.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using System.Text.Json;
 @using AntDesign;
 @using H.LowCode.DesignEngine.Abstraction
 @using H.LowCode.DesignEngine
