--- a/src/RenderEngine/H.LowCode.RenderEngine/ComponentRender/ContainerComponentRender.razor
+++ b/src/RenderEngine/H.LowCode.RenderEngine/ComponentRender/ContainerComponentRender.razor
@@ -3,8 +3,9 @@
 <div class="renderengine-componentcontainer" style="@ContainerComponent.ComponentStyle.DefaultStyle">
     @foreach (var comp in ContainerComponent.Childrens)
     {
-        <div style="width: @(comp.ComponentStyle.ItemWidth/24*100)%; min-height: @(comp.ComponentStyle.ItemHeight)px;
-                        @comp.ComponentStyle.DefaultStyle @comp.ComponentStyle.CustomStyle">
+        <div style="min-height: @(comp.ComponentStyle.ItemHeight)px;
+                width: @((comp.ComponentStyle.ItemWidth ?? 24)  /24 * 100)%;
+                @comp.ComponentStyle.DefaultStyle @comp.ComponentStyle.CustomStyle">
             <ComponentRender Component="@comp"></ComponentRender>
         </div>
     }
