--- a/src/Workbench/H.LowCode.Workbench/Pages/MyApps.razor
+++ b/src/Workbench/H.LowCode.Workbench/Pages/MyApps.razor
@@ -11,11 +11,11 @@
 <div style="margin:-24px -24px 0px -24px; padding: 0 50px; background-size: 100% 80px; background-image:url(https://img.alicdn.com/imgextra/i4/O1CN01U2c7FD1EQyHx3iei2_!!6000000000347-2-tps-5760-320.png)">
     <div style="width:80%; line-height:80px; margin:auto;">
         <div style="display: flex; justify-content: space-between; margin: 0 0 8px 5px;">
-            <div style="text-align: left; width:500px;">
+            <div style="width:500px;">
                 <span style="font-size: large; margin-right:20px;">XXX 你好!</span>
                 <span style="color:#c0baba;">你可以从这里开始创建应用～</span>
             </div>
-            <div style="text-align: right; width:80px; margin-right:10px;">
+            <div style="width:80px; margin-right:10px;">
                 <Button Type="@ButtonType.Primary" OnClick="@(()=>{ _visible = true; })">创建应用</Button>
             </div>
         </div>
@@ -28,7 +28,7 @@
                 <Search Placeholder="应用名称" OnSearch="()=>{}" />
             </div>
         </div>
-        <div style="text-align: right; width:300px; line-height:32px; margin-right:10px;">
+        <div style="line-height:32px; margin-right:10px;">
             <Select TItemValue="string" TItem="string" DefaultValue="@("all")" Style="width:100px">
                 <SelectOptions>
                     <SelectOption Value="@("all")" Label="全部" />
