--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
@@ -3,7 +3,7 @@
 @inject DragDropStateService DragDropStateService
 
 <div class="dropitem-box @DropItemBoxClassMapper.Class" style="float:left; opacity:@Component.Opacity;
-        width: @((Component.ComponentStyle.ItemWidth ?? (IsInRootContainer ? PageCascading.PageLayout/4 : 24))  /24 * 100)%;
+        width: @((Component.ComponentStyle.ItemWidth ?? (IsInRootContainer ? 24/PageCascading.PageLayout : 24))  /24 * 100)%;
         min-height: @(Component.ComponentStyle.ItemHeight)px;
         position:@Component.ComponentStyle.Position;
         @Component.ComponentStyle.DefaultStyle @Component.ComponentStyle.CustomStyle"
