--- a/src/RenderEngine/H.LowCode.RenderEngine/ComponentRender/ComponentRender.razor
+++ b/src/RenderEngine/H.LowCode.RenderEngine/ComponentRender/ComponentRender.razor
@@ -8,8 +8,8 @@ else
 {
     <div class="renderengine-componentitem-box" style="float:left;
         position:@Component.ComponentStyle.Position;
-        width: @((Component.ComponentStyle.ItemWidth ?? (IsInRootContainer ? PageCascading.PageLayout/4 : 24))  /24 * 100)%;
-        min-height: @(Component.ComponentStyle.ItemHeight)px;
+        width: @((Component.ComponentStyle.ItemWidth ?? (IsInRootContainer ? 24/PageCascading.PageLayout : 24))  /24 * 100)%;
+        min-width:85px; min-height: @(Component.ComponentStyle.ItemHeight)px;
         @Component.ComponentStyle.DefaultStyle @Component.ComponentStyle.CustomStyle">
 
         @if (Component.IsHiddenTitle == false && Component.IsContainerComponent == false)
